--- a/kub/mysql-deployment.yaml
+++ b/kub/mysql-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: mysql:8
+          image: jidel1/projet-jidel-paymybuddy-db
           env:
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
